syntax = "proto3";
option csharp_namespace = "CodeSample.gRPC";
package persons;

import "google/protobuf/empty.proto";

message PersonModel {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string nationalCode = 4;
	string birthDate = 5;
}

message CreatePersonRequest {
	string firstName = 1;
	string lastName = 2;
	string nationalCode = 3;
	string birthDate = 4;
}
message CreatePersonResponse { PersonModel person = 1; }

message GetPersonRequest { string id = 1; }
message GetPersonResponse { PersonModel person = 1; }

message ListPeopleResponse { repeated PersonModel people = 1; }

message UpdatePersonRequest {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string nationalCode = 4;
	string birthDate = 5;
}
message UpdatePersonResponse { PersonModel person = 1; }

message DeletePersonRequest { string id = 1; }
message DeletePersonResponse { bool success = 1; }

service PersonService {
	rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse);
	rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
	rpc ListPeople(google.protobuf.Empty) returns (ListPeopleResponse);
	rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse);
	rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse);
}